force-app/main/default/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Annualized_Revenue__c</fullName>
        <formula>UnitPrice  * (IF ( PricebookEntry.Product2.ProductCode = &apos;TDI&apos;, 4, 12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated the Annualized revenue by multiplying Sales Price by 4 for Product Code of &quot;TDI&quot; and by 12 for all other products.</inlineHelpText>
        <label>Annualized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Revenue_for_Rollup__c</fullName>
        <description>Hidden, stored field to be used in Rollup Summary.  Set via Process Builder.</description>
        <label>Annualized Revenue for Rollup</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Group</label>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complementary_Coverage_Code__c</fullName>
        <inlineHelpText>Enter the Coverage Code for the Ancillary products you are offering.</inlineHelpText>
        <label>Complementary Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Coverage_Code__c</fullName>
        <inlineHelpText>Enter the Dental Coverage Code you want to offer on this Product.</inlineHelpText>
        <label>Dental Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Coverage_Code__c</fullName>
        <label>Drug Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Coverage_Code__c</fullName>
        <label>Med Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Required_Revenue__c</fullName>
        <formula>Selected_By_Customer__c &amp;&amp; 
 UnitPrice  = 0 &amp;&amp;
(
PricebookEntry.Product2.Name  = &apos;Plan Offering&apos; &amp;&amp; NOT ISBLANK ( 
Dental_Coverage_Code__c ) 
|| 
PricebookEntry.Product2.Name &lt;&gt; &apos;Plan Offering&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Required Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Required_Revenue_for_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Required Revenue for Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPP_Coverage_Code__c</fullName>
        <label>PPP Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_By_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If true, the product was chosen by the customer for the contract.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Coverage_Code__c</fullName>
        <label>Vision Cov Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Cant_Create_or_Edit_if_Closed_Opp</fullName>
        <active>true</active>
        <description>This VR prevents Opp Products from being created or edited on an Opp that has been moved to Closed Won/Lost.</description>
        <errorConditionFormula>$User.Run_Validation__c &amp;&amp;
Opportunity.IsClosed</errorConditionFormula>
        <errorMessage>Products cannot be created or edited for Opportunities that are in the Closed Won or Closed Lost stage.</errorMessage>
    </validationRules>
</CustomObject>