force-app/main/default/objects/OpportunityLineItem/fields/Ancillary_Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Coverage_Code__c</fullName>
    <inlineHelpText>Enter the Coverage Code for the Ancillary products you are offering.</inlineHelpText>
    <label>Ancillary Coverage Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>