force-app/main/default/objects/OpportunityLineItem/validationRules/Cant_Create_or_Edit_if_Closed_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_or_Edit_if_Closed_Opp</fullName>
    <active>true</active>
    <description>This VR prevents Opp Products from being created or edited on an Opp that has been moved to Closed Won/Lost.</description>
    <errorConditionFormula>$User.Run_Validation__c &amp;&amp;
Opportunity.IsClosed</errorConditionFormula>
    <errorMessage>Products cannot be created or edited for Opportunities that are in the Closed Won or Closed Lost stage.</errorMessage>
</ValidationRule>